# config-binder

./: CHANGELOG.md  HISTORY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
config_binder/: __init__.py  binder.py
data/test/: test.json  test.yaml
test/: binder_test.py
